# AnalyticIntegrals

./: Cargo.toml  README.md
gauss_legendre_data/: gauss_legendre_nodes_10.txt  gauss_legendre_nodes_16.txt  gauss_legendre_nodes_200.txt  gauss_legendre_nodes_50.txt  gauss_legendre_nodes_7.txt  gauss_legendre_nodes_8.txt
src/: analytic_integrals.rs  green_integrals.rs  integral_functions.rs  integrals.rs  lib.rs  main.rs  quadratic_surface_approximation.rs  side_map_table.rs  structures.rs  test_functions.rs  transforms.rs  utils.rs
src/structures/: analytic_triangle.rs  node.rs  projection_point.rs  triangle.rs  vertex_point.rs
test_data/: node_normals.txt  nodes.txt  triangles.txt
