[package]
name = "integrate_singular"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = {version = "0.15.6", features = ["rayon"]}
libm = "0.2.8"
ndarray-parallel = "0.9.1"
ndarray-stats = {version = "0.5.1"}
rayon = "1.10.0"
clap = "3"
rand = "0.8.5"
queues = "1.1.0"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'unpacked'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false